<resources>
    <string name="app_name">cookBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title">CookBook</string>
    <string name="subtitle">For true food lovers</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recipe">Recipes</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_add_recipe">Add recipe</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_info">Information</string>

    <string name="addrecipe_recipelabel">Recipe</string>
    <string name="addrecipe_instructionslabel">Instructions</string>

    <string name="info_githublinks">
        <a href="https://github.com/stijnhhh">Stijn Haerkens</a> &amp;
        <a href="https://github.com/aswevers">Amber Swevers</a>
    </string>
    <string name="info_summary">CookBook will help you find new recipes,
    save your favorites and allow you to save your own recipes! Find your recipes
    quickly by searching by ingredient, category or name or set a timer to keep track
    of food!<br/></string>
    <string name="info_githubproject">Let us know how to improve!
        <a href="https://github.com/stijnhhh/cookbook">Contact us on GitHub</a>
    </string>
</resources>
